# BIRD-Obfuscation

./: .env.example  .gitignore  AGENTS-zh.md  AGENTS.md  CITATION.cff  CLAUDE.md  PROGRESS-zh.md  PROGRESS.md  README-zh.md  README.md  docker-compose.yml  eda.py  pyproject.toml  requirements.txt
artifacts/: retained_dbs.json  sql_column_roles.json  table_row_counts.json  trap_manifest.json  trap_plan.json  trap_table_plan.json
data/: README-zh.md  README.md
docs/: PROGRESS-zh.md  PROGRESS.md  eda-report-zh.md  eda-report.md  overview-zh.md
docs/methodology/: dataset-zh.md  dataset.md  evaluation-zh.md  evaluation.md  obfuscation-extensions-zh.md  (+3 more)
eval_dataset/: README-zh.md  README.md  build_eval_dataset.py  db_language_map.json  decoy_map.json  gold_star_expanded.jsonl  order_sensitive_qids.json  question_paraphrases.jsonl  schema_rename_map.json  trap_table_manifest.json
exports/: README-zh.md  README.md
pipeline/: 00_audit_sqlite_identifiers.py  01_split.py  02_assign_languages.py  03_generate_rename_map.py  03b_check_translation_quality.py  04_load_pg_base.py  05_transpile_sql.py  05b_apply_sql_fixes.py  05c_export_fix_batch.py  06_build_pg_rename.py  07_rename_sql_and_validate.py  08_inject_decoys.py  09_paraphrase_questions.py  10_inject_traps.py  _corruption.py  _db.py  _eval_helpers.py  _offline_eval.py  _pg_helpers.py  _transpile_helpers.py  _traps.py  eval_ablation.py  eval_contamination.py  export_qa_sql.py  grade_offline_eval.py  precompute_gold_result_hashes.py  prepare_offline_eval.py  probe_schema_recall.py  run_offline_generations.py
(+18 files in other folders)
